MOD:add jvm args in boot script